# NextStep-AI

./: README.md
internai/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  env.example  pyproject.toml
internai/agents/app_writer/: __init__.py  writer.py
internai/agents/coach/: __init__.py  coach.py
internai/agents/cv_analyzer/: __init__.py  analyzer.py
internai/agents/job_scout/: __init__.py  scout.py
internai/agents/matcher/: __init__.py  matcher.py
internai/apps/api/: README.md  main.py  pyproject.toml
internai/apps/api/app/: __init__.py  agents_registry.py  coral_client.py  cv_parser.py  llm.py  models.py  routes.py  settings.py
internai/apps/api/app/data/: sample_jobs.json
internai/apps/api/tests/: __init__.py  test_coral_integration.py  test_main.py  test_models.py  test_routes.py
internai/apps/web/: .eslintrc.json  .prettierignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
internai/apps/web/public/: sample_jobs.json
internai/apps/web/src/app/: globals.css  layout.tsx  page.tsx
internai/apps/web/src/app/agents/: page.tsx
internai/apps/web/src/app/applications/: page.tsx
internai/apps/web/src/app/coach/: page.tsx
internai/apps/web/src/app/dashboard/: page.tsx
internai/apps/web/src/app/matches/: page.tsx
internai/apps/web/src/components/: Button.tsx  Card.tsx  FileDrop.tsx  Input.tsx  MatchCard.tsx  Modal.tsx  Sidebar.tsx  Textarea.tsx  TopBar.tsx  index.ts
internai/apps/web/src/components/ui/: Modal.tsx  ProgressBar.tsx  SkillChip.tsx  index.ts
internai/infra/coral/: README.md
